--- a/public/index.html
+++ b/public/index.html
@@ -95,10 +95,10 @@
     <!-- Start Intro -->
     <div id="fh5co-intro">
         <div class="container">
-            <h1>Digital solutions </h1>
+            <h1>RTV solutions </h1>
             <div class="row">
                 <div class="col-md-6 col-md-push-6 fh5co-intro-sub">
-                    <p>Work is a free html5 template crafted with love by  . Released under <a href="#">Creative Commons 3.0</a> license. Preview images by plmd.me Preview images are not included on downloads.</p>
+                    <p>RTV represents for real-time video which is a free online video sharing website with love by  RTV company. Released under <a href="#"> MIT</a> license. Preview images by plmd.me Preview images are not included on downloads.</p>
                 </div>
             </div>
         </div>
